// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> shows the correct snapshot tree for the <Title> element 1`] = `
.css-0,
[data-css-0] {
  font-size: 48px;
  font-weight: 200;
  color: #808080;
}

<h1
  className="css-0"
>
  The Title
</h1>
`;

exports[`<Title /> shows the correct snapshot tree for the <Title> element with options 1`] = `
.css-0,
[data-css-0] {
  font-size: 64px;
  font-weight: 200;
  color: purple;
  margin-top: 512px;
}

<h1
  className="css-0"
>
  The Title with options
</h1>
`;
